--- a/theme.css
+++ b/theme.css
@@ -12,6 +12,7 @@ body::-webkit-scrollbar,
 .lobby__support,
 .lobby__about,
 .lobby__tv,
+.lobby__blog,
 .lobby__puzzle,
 #friend_box,
 .lpools .perf,
