--- a/theme.css
+++ b/theme.css
@@ -7,6 +7,7 @@ body::-webkit-scrollbar,
 .rmoves,
 .upt__info__ratings,
 .lobby__box,
+.lobby__spotlights,
 .lobby__streams,
 .lobby__counters,
 .lobby__support,
